# userfs

./: .clangd  .editorconfig  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json
docs/: fat-changes-analysis.md  vfs-completeness-analysis.md
include/: ufs.h  ufs_block_io.h  ufs_fs.h  ufs_types.h
src/: libufs.c
src/fat/: cache.c  dir.c  fat_core.h  fat_fs.c  fatent.c  misc.c  namei.c  ondisk.h  vfs_file.c  vfs_inode.c
src/fs/fat/: CMakeLists.txt
src/fs/fat/src/: cache.c  dir.c  fat_core.h  fat_fs.c  fatent.c  misc.c  namei.c  ondisk.h  vfs_file.c  vfs_inode.c
src/tools/fatool/: CMakeLists.txt
src/tools/fatool/src/: cmd_cat.c  cmd_cp.c  cmd_info.c  cmd_ls.c  cmd_mkdir.c  cmd_mount.c  cmd_mv.c  cmd_rm.c  cmd_umount.c  cmds.h  main.c
src/vfs/: CMakeLists.txt  api.c  block_io.c  dentry.c  file.c  internal.h  path.c  register.c  super.c
src/vfs/include/vfs/: ufs.h  ufs_block_io.h  ufs_fs.h  ufs_types.h
src/vfs/src/: api.c  block_io.c  dentry.c  file.c  inode.c  internal.h  path.c  register.c  super.c
tools/fatool/: CMakeLists.txt  cmd_cat.c  cmd_cp.c  cmd_info.c  cmd_ls.c  cmd_mkdir.c  cmd_mount.c  cmd_mv.c  cmd_rm.c  cmd_umount.c  cmds.h  main.c
